--- a/locale/sr_RS@latin/LC_MESSAGES/django.po
+++ b/locale/sr_RS@latin/LC_MESSAGES/django.po
@@ -1110,8 +1110,8 @@ msgstr "PROSEČNA STOPA ODGOVORA"
 
 msgid "U-REPORTERS BY REGION"
 msgstr ""
-"U-REPORTERI PO REGIONIMA\n"
-"(Mapa je prikazana u skladu sa Rezolucijom Saveta bezbednosti Ujedinjenih nacija 1244)"
+"U-REPORTERI PO REGIONIMA<br>"
+"(Mapa je prikazana u skladu sa Rezolucijom Saveta bezbednosti<br>Ujedinjenih nacija 1244)"
 
 msgid "FILTER RESULTS"
 msgstr "FILTRIRANI REZULTATI"
